compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__functions__nested_unqualified_imported_function_called.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\nimport some/other.{wibble}\n\npub fn main() {\n  wibble()\n}\n"
---
----- SOURCE CODE

import some/other.{wibble}

pub fn main() {
  wibble()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> nil.
main() ->
    some@other:wibble().
