compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__functions__unused_private_functions.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\npub fn main() -> Int {\n  used()\n}\n\nfn used() -> Int {\n  123\n}\n\nfn unused1() -> Int {\n  unused2()\n}\n\nfn unused2() -> Int {\n  used()\n}\n\nfn unused3() -> Int {\n  used()\n}\n"
---
----- SOURCE CODE

pub fn main() -> Int {
  used()
}

fn used() -> Int {
  123
}

fn unused1() -> Int {
  unused2()
}

fn unused2() -> Int {
  used()
}

fn unused3() -> Int {
  used()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec used() -> integer().
used() ->
    123.

-spec main() -> integer().
main() ->
    used().
